# acoustic_bluerov2

./: README.md
bridge/: config.yaml  pub.py  ros_allowed_topics.conf  sub.py
controller/src/bluerov2_controller/: CMakeLists.txt  keymap.conf  package.xml
controller/src/bluerov2_controller/src/: keyboard_thruster_controller.cpp  thruster_controller.cpp  thruster_controller.hpp
controller/src/bluerov_controller/: CMakeLists.txt  package.xml
controller/src/bluerov_controller/config/: config.yaml
controller/src/bluerov_controller/include/: controller_axes.h  controller_reader.h  gui_viewer.h  publisher_node.h  status.h  status_node.h
controller/src/bluerov_controller/src/: controller_reader.cpp  gui_viewer.cpp  main.cpp  publisher_node.cpp  status_node.cpp
simulation/: Dockerfile  docker-compose.yml  readme.md
